# chromadb-fastapi-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: router.py
app/api/endpoints/: collections.py  documents.py
app/core/: config.py
app/db/: client.py
app/models/: collection.py  document.py
app/utils/: embedding_functions.py
